--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "i18next": "^11.9.1",
+    "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-i18next": "^8.0.7",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
