--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "bootstrap": "^4.1.3",
     "i18next": "^11.9.1",
     "node-sass": "^4.9.3",
+    "plotly.js": "^1.41.3",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.5.2",
     "react-i18next": "^8.0.7",
+    "react-plotly.js": "^2.2.0",
+    "react-prism": "^4.3.2",
     "react-scripts": "2.0.4",
     "reactstrap": "^6.5.0"
   },
